--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,7 +68,26 @@ services:
     depends_on:
       - mariadb
 
+  bookstack:
+    networks:
+      bdd:
+    image: linuxserver/bookstack
+    container_name: bookstack
+    environment:
+      - DB_HOST=mariadb
+      - DB_PORT=3306
+      - DB_DATABASE=bookstack
+      - DB_USERNAME=bookstack_user
+      - DB_PASSWORD=bookstack_password
+      - APP_URL=http://146.19.168.77:8081
+    ports:
+      - "8081:80"
+    depends_on:
+      - mariadb
+
   focalboard:
+    networks:
+      bdd:
     image: mattermost/focalboard
     container_name: focalboard
     ports:
