--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,56 +1,89 @@
 services:
-  pocketmine:
-    networks:
-      bdd:
+  # pocketmine:
+  #   networks:
+  #     - bdd
+  #   build:
+  #     context: ./pocketmine
+  #   container_name: pocketmine-server
+  #   ports:
+  #     - "19132:19132/udp"
+  #   environment:
+  #     MYSQL_HOST: mariadb
+  #     MYSQL_PORT: 3306
+  #     MYSQL_DB: mc_server
+  #     MYSQL_USER: mc_user
+  #     MYSQL_PASSWORD: mc_password
+  #   volumes:
+  #     - "./pocketmine/data/worlds:/pocketmine/worlds/"
+  #     - "./pocketmine/data/players:/pocketmine/players/"
+  #   depends_on:
+  #     - mariadb
+
+  # mariadb:
+  #   networks:
+  #     - bdd
+  #   image: mariadb:latest
+  #   container_name: mariadb
+  #   ports:
+  #     - "3306:3306"
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: root
+  #     MYSQL_DATABASE: mc_server
+  #     MYSQL_USER: mc_user
+  #     MYSQL_PASSWORD: mc_password
+  #   volumes:
+  #     - "./mariadb/data/db:/var/lib/mysql" # Volume pour stocker les données de la base de données
+
+  # Service PocketMine
+  server:
     build:
-      context: ./pocketmine
-    image: server
+       context: ./server
     container_name: pocketmine-server
     ports:
-      - "19132:19132/udp"
-    environment:
-      MYSQL_HOST: mariadb
-      MYSQL_PORT: 5432
-      MYSQL_DB: mc_server
-      MYSQL_USER: mc_user
-      MYSQL_PASSWORD: mc_password
+      - "19132:19132/udp" # PocketMine utilise UDP
     volumes:
-      - "./pocketmine/data/worlds:/pocketmine/worlds/"
-      - "./pocketmine/data/players:/pocketmine/players/"
+      - "./data/worlds:/server/worlds/"   # Save les mondes persistants
+      - "./data/players:/server/players/" # Save les données des joueurs
     depends_on:
-      - mariadb
+      - mariadb # Assure que MariaDB est prêt avant de démarrer le serveur (au cas zou)
+    environment:
+      PM_DB_HOST: mariadb
+      PM_DB_PORT: 3306
+      PM_DB_USER: pocketmine
+      PM_DB_PASSWORD: pocketmine_password
+      PM_DB_NAME: pocketmine_database
 
+  # Service MariaDB
   mariadb:
-    networks:
-      bdd:
     image: mariadb:latest
     container_name: mariadb
+    restart: always
     ports:
-      - "3306:3306"
+      - "3306:3306" # Port MySQL/MariaDB
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: mc_server
-      MYSQL_USER: mc_user
-      MYSQL_PASSWORD: mc_password
+      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_DATABASE: pocketmine_database
+      MYSQL_USER: pocketmine
+      MYSQL_PASSWORD: pocketmine_password
+    volumes:
+      - "./data/db:/var/lib/mysql" # Volume pour stocker les données de la base de données
 
   phpmyadmin:
     networks:
-      bdd:
+      - bdd
     image: phpmyadmin/phpmyadmin:latest
     container_name: phpmyadmin
     ports:
-      - "8080:80"
+      - "8080:8080"
     environment:
       PMA_HOST: mariadb
       MYSQL_ROOT_PASSWORD: root
 
   nextjs:
     networks:
-      bdd:
+      - bdd
     build: ./web
     container_name: nextjs
-    ports:
-      - "3000:3000"
     environment:
       - DB_URL=mariadb://mc_user:mc_password@mariadb:5432/mc_server
     depends_on:
@@ -58,15 +91,27 @@ services:
 
   discordbot:
     networks:
-      bdd:
+      - bdd
     build: ./discord-bot
     container_name: discordbot
-    ports:
-      - "3001:3001"
     environment:
       - DB_URL=mariadb://mc_user:mc_password@mariadb:5432/mc_server
     depends_on:
       - mariadb
+
+  nginx:
+    networks:
+      - bdd
+    image: nginx:latest
+    container_name: nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - /etc/letsencrypt:/etc/letsencrypt
+      - ./server-web/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - nextjs
 
 networks:
   bdd:
