--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,75 +2,74 @@ version: '3.8'
 
 services:
   pocketmine:
-    networks:
-      - bdd
     build:
       context: ./pocketmine
-    image: server
+    image: pocketmine-server:latest
     container_name: pocketmine-server
     ports:
       - "19132:19132/udp"
     environment:
       MYSQL_HOST: mariadb
-      MYSQL_PORT: 5432
+      MYSQL_PORT: 3306
       MYSQL_DB: mc_server
-      MYSQL_USER: mc_user
-      MYSQL_PASSWORD: mc_password
+      MYSQL_USER: root
+      MYSQL_PASSWORD: root
     volumes:
       - "./pocketmine/data/worlds:/pocketmine/worlds/"
       - "./pocketmine/data/players:/pocketmine/players/"
     depends_on:
       - mariadb
-
-  mariadb:
     networks:
       - bdd
+
+  mariadb:
     image: mariadb:latest
     container_name: mariadb
     ports:
       - "3306:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: mc_server
-      MYSQL_USER: mc_user
-      MYSQL_PASSWORD: mc_password
+      MARIADB_ROOT_PASSWORD: test
     volumes:
       - ./data/db:/var/lib/mysql
-
-  phpmyadmin:
+      - mysqlsock:/run/mysqld
     networks:
       - bdd
+
+  phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
     container_name: phpmyadmin
     ports:
-      - "8080:8080"
+      - "8080:80"
     environment:
-      PMA_HOST: mariadb
-      MYSQL_ROOT_PASSWORD: root
+      PMA_SOCKET: /run/mysqld/mysqld.sock
+    volumes:
+      - mysqlsock:/run/mysqld
+    networks:
+      - bdd
 
   nextjs:
-    networks:
-      - bdd
-    build: ./web
+    build:
+      context: ./web
     container_name: nextjs
     environment:
-      - DB_URL=mariadb://mc_user:mc_password@mariadb:5432/mc_server
+      DB_URL: "mariadb://root:root@mariadb:3306/mc_server"
     depends_on:
       - mariadb
+    networks:
+      - bdd
 
   discordbot:
-    networks:
-      - bdd
-    build: ./discord-bot
+    build:
+      context: ./discord-bot
     container_name: discordbot
     environment:
-      - DB_URL=mariadb://mc_user:mc_password@mariadb:5432/mc_server
+      DB_URL: "mariadb://root:root@mariadb:3306/mc_server"
     depends_on:
       - mariadb
-
-  nginx:
     networks:
       - bdd
+
+  nginx:
     image: nginx:latest
     container_name: nginx
     ports:
@@ -81,6 +80,12 @@ services:
       - ./server-web/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - nextjs
+    networks:
+      - bdd
 
 networks:
   bdd:
+    driver: bridge
+
+volumes:
+  mysqlsock:
