--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,8 @@ services:
     build:
       context: ./web
     container_name: nextjs
+    ports:
+      - "3000:3000"
     environment:
       DB_URL: "mariadb://root:root@mariadb:3306/mc_server"
     depends_on:
