--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,11 @@ services:
       - mariadb
     networks:
       - bdd
+    develop:
+      watch:
+        - action: sync
+          path: ./pocketmine
+          target: /pocketmine
 
   mariadb:
     image: mariadb:latest
@@ -57,6 +62,12 @@ services:
       - mariadb
     networks:
       - bdd
+    develop:
+      watch:
+        - action: sync
+          path: ./web/app
+          ignore:
+            - node_modules/
 
   discordbot:
     build:
@@ -68,6 +79,12 @@ services:
       - mariadb
     networks:
       - bdd
+    develop:
+      watch:
+        - action: sync
+          path: ./discord-bot
+          ignore:
+            - package.json
 
   nginx:
     image: nginx:latest
