🔄 update: add target paths for sync actions in docker-compose.yml and refresh web submodule commit

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,7 @@ services:
       watch:
         - action: sync
           path: ./web/app
+          target: /app
           ignore:
             - node_modules/
 
@@ -83,7 +84,9 @@ services:
       watch:
         - action: sync
           path: ./discord-bot
+          target: /app
           ignore:
+            - node_modules/
             - package.json
 
   nginx:
